
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint64_t ;


 int __exit (int ) ;
 scalar_t__ bpf_lookup_elem (int*,int *) ;
 int errno ;
 int strerror (int ) ;

__attribute__((used)) static uint64_t get_value(int key) {
 uint64_t value;

 if (bpf_lookup_elem(&key, &value))
  __exit(strerror(errno));

 return value;
}
